# zombies-win

./: CMakeLists.txt
include/: global.hpp
scripts/: game-script.conf  global.conf
src/: main.cpp
